added two pictures

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h3>sliders of images</h3>
+    <img src="images/Captuffre.PNG" alt="">
+    <img src="images/download.jpeg" alt="">
 </body>
 </html>
